samples/_failures_safe/1761393793_e5d6f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b495c30a.c: In function ‘main’:
./samples/SAFE/__tmp_b495c30a.c:153:25: error: missing terminating " character
  153 |         fprintf(stderr, "Failed to add
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b495c30a.c:153:9: error: expected expression at end of input
  153 |         fprintf(stderr, "Failed to add
      |         ^~~~~~~
./samples/SAFE/__tmp_b495c30a.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b495c30a.c:153:9: error: expected declaration or statement at end of input
